<resources>
    <string name="app_name">TailorApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an Account? Create One.</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="men_s_tailoring">Men</string>
    <string name="women_s_tailoring">Women</string>
    <string name="new_arrivals">Custom Tailoring</string>
    <string name="logout">Logout</string>
    <string name="no_internet_msg">Opppss!!\nIt seems that you haven\'t connected to the Internet.</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_cart">Empty Cart</string>
    <string name="empty_cart_desc">Looks like you haven\'t made\nyour choice yet</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="available_options">Available Options</string>
    <string name="upload_a_style_instead">Upload A Style Instead</string>
    <string name="upload_image">Upload Image</string>
    <string name="fabric_details">Fabric Details</string>
    <string name="i_have_fabric">I have fabric</string>
    <string name="i_don_t_have_fabric">I don\'t have fabric</string>
    <string name="measurements">Measurements</string>
    <string name="send_the_tailor_to_my_home_for_taking_measurements">Send the technician to my home for taking measurements  *Only in Bangalore</string>
    <string name="use_my_existing_fit_garment">Use my existing fit garment  *Our logistics service provider will collect the same</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_methods">Shipping Methods</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="order_history">Order History</string>
    <string name="customer_s_name">Customer\'s Name</string>
    <string name="date">Date</string>
    <string name="total_products">Total Products</string>
    <string name="status">Status</string>
    <string name="order_id">Order ID</string>
    <string name="no_order_msg">Opppsss. It Seems that you haven\'t submitted any orders yet.</string>
    <string name="are_you_sure_you_want_to_place_an_order">Are you sure you want to place an order?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="note">The above mentioned price is the initial price and the prices may vary according to the design and requirements.</string>
</resources>
