<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_product"
            layout="@layout/app_bar_layout"/>

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/placeholder_image"
            android:scaleType="fitXY"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:typeface="monospace" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_options"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:typeface="monospace"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_style_instead"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/btn_image_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fabric_details"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:paddingBottom="5dp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGrpFabric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <RadioButton
                android:id="@+id/radioBtnHaveFabric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_fabric"
                android:typeface="monospace"/>

            <RadioButton
                android:id="@+id/radioBtnDntHaveFabric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_don_t_have_fabric"
                android:typeface="monospace"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurements"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:paddingBottom="5dp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGrpMeasurements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <RadioButton
                android:id="@+id/radioBtnExisting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_my_existing_fit_garment"
                android:typeface="monospace"/>

            <RadioButton
                android:id="@+id/radioBtnSendTailor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_the_tailor_to_my_home_for_taking_measurements"
                android:layout_marginTop="5dp"
                android:typeface="monospace"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pickup_date"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:paddingBottom="5dp"
            android:gravity="center|left"
            android:paddingLeft="5dp"
            android:background="@drawable/tv_border"
            android:drawableRight="@drawable/ic_calendar"
            android:paddingRight="10dp"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pickup_time"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:paddingBottom="5dp"
            android:gravity="center|left"
            android:paddingLeft="5dp"
            android:background="@drawable/tv_border"
            android:drawableRight="@drawable/ic_time"
            android:paddingRight="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"/>

    </LinearLayout>

</ScrollView>