<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_image"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:typeface="monospace"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_below="@id/tv_name"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price"
            android:typeface="monospace"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/tv_fabric_details"
            android:layout_below="@id/tv_price"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fabric_details"
            android:typeface="monospace"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/tv_measurement_details"
            android:layout_below="@id/tv_fabric_details"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/measurements"
            android:typeface="monospace"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/tv_pickup_date"
            android:layout_below="@id/tv_measurement_details"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pickup_date"
            android:typeface="monospace"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/tv_pickup_time"
            android:layout_below="@id/tv_pickup_date"
            android:layout_toRightOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pickup_time"
            android:typeface="monospace"
            android:paddingLeft="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>