<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5.5"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="3dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_year"
                android:layout_above="@id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:text="@string/date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="28sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/tv_month"
                android:layout_below="@id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/date"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textSize="16sp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_s_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/tv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_products"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/total"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/pendingStatus"
            android:paddingBottom="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>