<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.PlaceOrderActivity">

    <include
        android:id="@+id/toolbar_placeOrder"
        layout="@layout/app_bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_methods"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGrpShippingMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioBtnCashOnDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_on_delivery"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:typeface="monospace"
                android:gravity="right"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/tv_totalPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="45000"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:typeface="monospace"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/confirm_order"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>